Update OAP documentation